--- a/lab8.css
+++ b/lab8.css
@@ -20,3 +20,49 @@ th{
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
 }
+div{
+    
+}
+header {
+    background-color: black;
+    height: 60px;
+    display: flexbox;
+    z-index: 0;
+}
+
+header .navbar {
+    display: flexbox;
+}
+
+header .navbar ul {
+    display: flex;
+}
+
+header .navbar ul li {
+    display: flex;
+    list-style: none;
+}
+
+header .navbar ul li a {
+    text-decoration: none;
+    list-style: none;
+    color: white;
+    padding: 20px;
+}
+
+header .navbar ul li a:hover {
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+}
+
+#login {
+    margin-left: 750px;
+    background-color: violet;
+    color: black;
+}
+
+#login:hover {
+    background-color: white;
+    border-radius: 20px;
+}
